--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/moi.png" />
+<!--		<link rel="icon" href="https://emoji.beeimg.com/🐋" />-->
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text y=%2214%22 font-size=%2214%22>🐋</text></svg>">
 		<link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
