--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<title>SchönDassDuDavid</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text y=%2214%22 font-size=%2214%22>🐋</text></svg>">
 		<link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
+		<script defer src="https://cloud.umami.is/script.js" data-website-id="b0f493fa-db5b-4ea8-a5df-f178327db144"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
